--- a/electron/package.json
+++ b/electron/package.json
@@ -5,6 +5,10 @@
   "main": "dist/main/index.js",
   "author": "notdp",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/notdp/oroio.git"
+  },
   "scripts": {
     "dev": "concurrently \"npm run dev:main\" \"npm run dev:renderer\"",
     "dev:main": "tsc -p tsconfig.main.json --watch",
